--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+
+@import './partials/header';
+@import './partials/footer';
+@import './partials/welcome';
+
+
+a {
+    text-decoration: none;
+
+    &:hover {
+        color: lightcoral;
+    }
+
+}
